--- a/public/sliderframe.html
+++ b/public/sliderframe.html
@@ -6,17 +6,16 @@
 <body>
 	
 		
-	<div id='iavouch_3' class="iavouch_3_reset" style="color:black;"><div id='iavouch_content_3'></div></div>
+	<div id='iavouch_3' style="color:black;"><div id='iavouch_content_3'></div></div>
 
 	<script type='text/javascript'>
 	// this line hides visibility of keyword stuffed text
 	document.getElementById('iavouch_content_3').style.visibility = 'hidden';
 	var site_id = '7';
-	var remoteurl_id = 'blond_fashion_flue';
+	var remoteurl_id = 'blond_jones_flue';
 	var version_n = '3';
 	var layout_type = '&layout=embed'; 
-	var widget_width = '450';
-  // var add_review_bottom = '1';
+	var widget_width = '600px'; 
 
 	// On window load, calls function which creates script
 	  window.onload = function()       
@@ -40,4 +39,4 @@
 
 
 
-</html> 
+</html>
